# faucet-rs

./: Cargo.toml
src/: main.rs
templates/: index.html
