[package]
name = "faucet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
minijinja = { version = "0.30.7", features = ["builtins", "source"] }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
once_cell = "1.17.1"
anyhow = "1.0.70"
qrcode-generator = "4.1.7"
bitcoincore-rpc = "0.16.0"